--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <meta property="og:site_name" content="www.olesya-oriflame.ru">
    <meta property="og:title" content="Oriflame и AVON. Тирасполь-Бендеры">
    <meta property="og:description " content="Косметика Орифлейм, Эйвон, Уход За Телом и Гигиена, Ароматы, Каталоги, Большой выбор и Лучшие цены, Товар в наличии. Заказывайте прямо сейчас по телефону 777 4-07-88. Бесплатная Доставка по Тирасполю и Бендерам.">
-   <meta property="og:image" content="./img/carousel/nova.jpg">
+   <meta property="og:image" content="./img/carousel/nova.webp">
    <meta name="robots" content="index, follow">
    <!-- open graf /-->
    <!-- Bootstrap CSS -->
@@ -30,7 +30,7 @@
       <!-- Веб мастер яндекс -->
    <meta name="yandex-verification" content="2e2128036f627ea2"/>
 
-   <!-- <link rel="shortcut icon" href="./img/logo/ico-4.svg"> -->
+   <link rel="shortcut icon" href="./img/logo/ico-4.svg">
    <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -1045,11 +1045,8 @@
                <div class="textblock-left">
                   <div class="lef">
                      <h3>Шведский взгляд Oriflame</h3>
-                     <br>
                      <p>Поскольку мы шведская компания, у нас особый взгляд на красоту и на то, как нужно создавать продукты. С самого начала мы вдохновляемся природой и используем научные достижения, чтобы наша продукция была безопасной, надежной и эффективной. Именно благодаря этому подходу мы укрепили нашу репутацию на рынке. </p>
-                     <br>
                      <h4>Вдохновение от природы</h4>
-                     <br>
                      <p>Мы черпаем вдохновение в природе Швеции и восхищаемся силой растений, которым удается выживать в суровом нордическом климате с характерными для него темными, холодными зимами. Мы одними из первых в мире начали создавать косметику на основе натуральных экстрактов — например, березового сока — тем самым опередив на десятилетия другие бренды. </p>
                   </div>
                </div>
@@ -1059,11 +1056,8 @@
                <div class="textblock-right">
                   <div class="rig">
                      <h3>Продукция AVON высокого качества</h3>
-                     <br>
                      <p>С 1886 года основным правилом Компании было Качество. Для производства используются высококачественные и безопасные ингредиенты, соответствующие международным стандартам. Этапы производства всей продукции строго контролируются на предмет асептичности и соответствия стандартам. Все продукты проходят тесты in vitro. </p>
-                     <br>
                      <h4>Этическая Компания</h4>
-                     <br>
                      <p>Новые формулы и ингредиенты не испытываются на животных. Продукты не содержат компонентов, наносящих вред окружающей среде, упаковка подлежит повторной переработке.</p>
                   </div>
                </div>
@@ -1167,9 +1161,9 @@
       <div class="col-sm footer-box">
          <h5>Доставка</h5>
          <div class="footer-img" >
-            <img src="./img/img_fon/avon_s.png" alt="AVON">
-            <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
-            <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
+            <img src="./img/img_fon/avon_s.webp" alt="AVON">
+            <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
+            <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
          </div>
          <p> Тирасполь - Бендеры <br>(Центр)</p>
          <p>Суббота - Воскресенье</p>
@@ -1178,9 +1172,9 @@
 
       <div class="col-sm footer-box">
          <h5>Каталоги</h5>
-         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
-         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
-         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">Faberlic</a></p>
+         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
+         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
+         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">Faberlic</a></p>
       </div>
 
       <div class="col-sm footer-box">
