--- a/makeup.html
+++ b/makeup.html
@@ -12,7 +12,7 @@
    <meta property="og:site_name" content="www.olesya-oriflame.ru">
    <meta property="og:title" content="Макияж Oriflame и AVON">
    <meta property="og:description " content="Наша косметика может подчеркнуть вашу красоту. Эффектно крась реснички, Накрась губы помадой и блеском, получи идеальный тон, не забудь про яркий маникюр...">
-   <!-- <meta property="og:image" content="./img/makeup/repost-1.jpg"> -->
+   <meta property="og:image" content="./img/makeup/repost-1.webp">
    <meta name="robots" content="index, follow">
    <!-- open graf /-->
    <!-- Bootstrap CSS -->
@@ -28,7 +28,7 @@
    <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
    <script src="https://yastatic.net/share2/share.js"></script>
    <!--  -->
-   <!-- <link rel="shortcut icon" href="./img/logo/ico-4.svg"> -->
+   <link rel="shortcut icon" href="./img/logo/ico-4.svg">
    <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -231,9 +231,9 @@
       <div class="col-sm footer-box">
          <h5>Доставка :</h5>
          <div class="footer-img" >
-            <img src="./img/img_fon/avon_s.png" alt="AVON">
-            <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
-            <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
+            <img src="./img/img_fon/avon_s.webp" alt="AVON">
+            <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
+            <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
          </div>
          <p> Тирасполь - Бендеры <br>(Центр)</p>
          <p>Суббота - Воскресенье</p>
@@ -242,9 +242,9 @@
 
       <div class="col-sm footer-box">
          <h5>Каталоги</h5>
-         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
-         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
-         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">faberlic</a></p>
+         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
+         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
+         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">faberlic</a></p>
       </div>
 
       <div class="col-sm footer-box">
