--- a/perfume.html
+++ b/perfume.html
@@ -12,7 +12,7 @@
    <meta property="og:site_name" content="www.olesya-oriflame.ru">
    <meta property="og:title" content="Духи, Парфюмерная вода Oriflame и AVON в Тирасполе-Бендерах">
    <meta property="og:description " content="Парфюмерия – Для женщин и мужчин, в наличии и под заказ. Заказывайте прямо сейчас по телефону 777 4-07-88. Бесплатная Доставка по Тирасполю и Бендерам.">
-   <meta property="og:image" content="./img/perfume/perfume_fon/maxresdefault.jpg">
+   <meta property="og:image" content="./img/perfume/perfume_fon/maxresdefault.webp">
    <meta name="robots" content="index, follow">
    <!-- open graf /-->
    <!-- Bootstrap CSS -->
@@ -251,9 +251,9 @@ card-deck__man
          <div class="col-sm footer-box">
             <h5>Доставка</h5>
             <div class="footer-img" >
-               <img src="./img/img_fon/avon_s.png" alt="AVON">
-               <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
-               <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
+               <img src="./img/img_fon/avon_s.webp" alt="AVON">
+               <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
+               <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
             </div>
             <p> Тирасполь - Бендеры <br>(Центр)</p>
             <p>Суббота - Воскресенье</p>
@@ -262,9 +262,9 @@ card-deck__man
 
          <div class="col-sm footer-box">
             <h5>Каталоги</h5>
-            <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
-            <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
-            <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">faberlic</a></p>
+            <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
+            <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
+            <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">faberlic</a></p>
          </div>
 
          <div class="col-sm footer-box">
