--- a/wash.html
+++ b/wash.html
@@ -12,7 +12,7 @@
    <meta property="og:site_name" content="www.olesya-oriflame.ru">
    <meta property="og:title" content="Средства для ванны и душа Oriflame и AVON">
    <meta property="og:description " content="Средства для ванны и душа будут делать кожу чистой и сияющей день за днем. У нас есть широкий ассортимент гелей для душана все случаи жизни. Оставить заявку по телефону 777 4-07-88. Бесплатная Доставка Тирасполь, Бендеры.">
-   <meta property="og:image" content="./img/wash/wash-bg-2.jpg">
+   <meta property="og:image" content="./img/wash/wash-bg-2.webp">
    <meta name="robots" content="index, follow">
    <!-- open graf /-->
    <!-- Bootstrap CSS -->
@@ -220,9 +220,9 @@
       <div class="col-sm footer-box">
          <h5>Доставка :</h5>
          <div class="footer-img" >
-            <img src="./img/img_fon/avon_s.png" alt="AVON">
-            <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
-            <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
+            <img src="./img/img_fon/avon_s.webp" alt="AVON">
+            <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
+            <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
          </div>
          <p> Тирасполь - Бендеры <br>(Центр)</p>
          <p>Суббота - Воскресенье</p>
@@ -231,9 +231,9 @@
 
       <div class="col-sm footer-box">
          <h5>Каталоги</h5>
-         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
-         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
-         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">faberlic</a></p>
+         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
+         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
+         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">faberlic</a></p>
       </div>
 
       <div class="col-sm footer-box">
