--- a/face.html
+++ b/face.html
@@ -232,9 +232,9 @@
       <div class="col-sm footer-box">
          <h5>Доставка :</h5>
          <div class="footer-img" >
-            <img src="./img/img_fon/avon_s.png" alt="AVON">
-            <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
-            <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
+            <img src="./img/img_fon/avon_s.webp" alt="AVON">
+            <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
+            <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
          </div>
          <p> Тирасполь - Бендеры <br>(Центр)</p>
          <p>Суббота - Воскресенье</p>
@@ -243,9 +243,9 @@
 
       <div class="col-sm footer-box">
          <h5>Каталоги</h5>
-         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
-         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
-         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">faberlic</a></p>
+         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
+         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
+         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">faberlic</a></p>
       </div>
 
       <div class="col-sm footer-box">
