--- a/face.html
+++ b/face.html
@@ -105,22 +105,22 @@
 
          <div class=" catalogi-block__item">
             <a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" class="category" title="Смотреть каталог">
-               <img src="./img/catalogi_images/avon-9.svg" class="img-fluid img-men" alt="Avon каталог">
-               <h4 class="catalog__subtitle">Avon.md  <span>каталог №9 </span></h4>
+               <img src="./img/catalogi_images/AVON.svg" class="img-fluid img-men" alt="Avon каталог">
+               <h4 class="catalog__subtitle">Avon.md  <span>каталог</span></h4>
             </a>
          </div>
 
          <div class="catalogi-block__item">
             <a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" class="category" title="Смотреть каталог">
-               <img src="./img/catalogi_images/oriflame-13.webp" class="img-fluid img-men" alt="Ofiflame каталог">
-               <h4 class="catalog__subtitle">Ofiflame.md <span>каталог №13</span> </h4>
+               <img src="./img/catalogi_images/Oriflame.webp" class="img-fluid img-men" alt="Ofiflame каталог">
+               <h4 class="catalog__subtitle">Ofiflame.md <span>каталог</span> </h4>
             </a>
          </div>
 
          <div class="catalogi-block__item">
             <a href="https://faberlic.md/catalog" target="_blank" class="category" title="Смотреть каталог">
                <img src="./img/catalogi_images/faberlic-13.webp" class="img-fluid img-men" alt="faberlic каталог">
-               <h4 class="catalog__subtitle">Faberlic.md <span>каталог №13</span> </h4>
+               <h4 class="catalog__subtitle">Faberlic.md <span>каталог</span></h4>
             </a>
          </div>
 
@@ -232,9 +232,9 @@
       <div class="col-sm footer-box">
          <h5>Доставка :</h5>
          <div class="footer-img" >
-            <img src="./img/img_fon/avon_s.webp" alt="AVON">
-            <img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">
-            <img src="./img/img_fon/Faberlic.webp" alt="Faberlic">
+            <img src="./img/img_fon/avon_s.png" alt="AVON">
+            <img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">
+            <img src="./img/img_fon/Faberlic.png" alt="Faberlic">
          </div>
          <p> Тирасполь - Бендеры <br>(Центр)</p>
          <p>Суббота - Воскресенье</p>
@@ -243,9 +243,9 @@
 
       <div class="col-sm footer-box">
          <h5>Каталоги</h5>
-         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.webp" alt="AVON">AVON</a></p>
-         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.webp" alt="Oriflame">Oriflame</a></p>
-         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.webp" alt="faberlic">faberlic</a></p>
+         <p><a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/avon_s.png" alt="AVON">AVON</a></p>
+         <p><a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/orillame_footer_2.png" alt="Oriflame">Oriflame</a></p>
+         <p><a href="https://faberlic.md/catalog" target="_blank" title="Смотреть каталог"><img src="./img/img_fon/Faberlic.png" alt="faberlic">faberlic</a></p>
       </div>
 
       <div class="col-sm footer-box">
