--- a/per.html
+++ b/per.html
@@ -101,22 +101,22 @@
 
          <div class=" catalogi-block__item">
             <a href="https://md.avon-brochure.com/c03_md_2022/campania/index.html#page/I" target="_blank" class="category" title="Смотреть каталог">
-               <img src="./img/catalogi_images/avon-9.svg" class="img-fluid img-men" alt="Avon каталог">
-               <h4 class="catalog__subtitle">Avon.md  <span>каталог №9 </span></h4>
+               <img src="./img/catalogi_images/AVON.svg" class="img-fluid img-men" alt="Avon каталог">
+               <h4 class="catalog__subtitle">Avon.md  <span>каталог</span></h4>
             </a>
          </div>
 
          <div class="catalogi-block__item">
             <a href="https://md.oriflame.com/ru/products/digital-catalogue-current?PageNumber=1" target="_blank" class="category" title="Смотреть каталог">
-               <img src="./img/catalogi_images/oriflame-13.webp" class="img-fluid img-men" alt="Ofiflame каталог">
-               <h4 class="catalog__subtitle">Ofiflame.md <span>каталог №13</span> </h4>
+               <img src="./img/catalogi_images/Oriflame.webp" class="img-fluid img-men" alt="Ofiflame каталог">
+               <h4 class="catalog__subtitle">Ofiflame.md <span>каталог</span> </h4>
             </a>
          </div>
 
          <div class="catalogi-block__item">
             <a href="https://faberlic.md/catalog" target="_blank" class="category" title="Смотреть каталог">
                <img src="./img/catalogi_images/faberlic-13.webp" class="img-fluid img-men" alt="faberlic каталог">
-               <h4 class="catalog__subtitle">Faberlic.md <span>каталог №13</span> </h4>
+               <h4 class="catalog__subtitle">Faberlic.md <span>каталог</span></h4>
             </a>
          </div>
 
